fix height on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: auto 1fr auto;
